# eap-war-watcher

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/: .dockerignore  Dockerfile  entrypoint.sh  mypy.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: cc98fe3c87aa_baseline_schema.py
backend/app/: __run__.py  main.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: alliance.py  player.py  screenshot.py  screenshot_crop.py  war.py
backend/app/routers/: export.py  uploads.py
backend/app/schemas/: war.py
backend/app/services/: color_side.py  digits.py  export_xlsx.py  image_matcher.py  ocr_provider.py
backend/app/services/excel_export/: __init__.py  api.py  colors.py  dims.py  images.py  render.py  sequence.py  status.py
backend/app/services/imatch/: __init__.py  alignment.py  api.py  caches.py  hashing.py  shortlist.py  text.py  verify.py
backend/app/services/pipelines/: uploads_pipeline.py
backend/app/services/segmentation/: __init__.py  common.py  dark.py  debug.py  dialog.py  hex_detect.py  masks.py  rows.py  se_cache.py  trim.py
backend/app/utils/: img_cache.py  profiling.py
war-watcher-ui/: index.html  package-lock.json  package.json  postcss.config.cjs  tsconfig.json  vite.config.ts
war-watcher-ui/src/: App.tsx  index.css  types.ts
war-watcher-ui/src/components/: ImageZoom.tsx
war-watcher-ui/src/lib/: api.ts  preview.ts  rows.ts
war-watcher-ui/src/types/: vite-plugin-svgr.d.ts
